Fixing logo alignment for better mobile look

--- a/css/small-business.css
+++ b/css/small-business.css
@@ -20,6 +20,12 @@ footer {
     padding: 30px 0;
 }
 
+@media(max-width:768px) {
+    .nav.navbar-nav li {
+        text-align: right;
+    }
+}
+
 @media(min-width:768px) {
     body {
         padding-top: 100px; /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
